home: fix spacing of the video

--- a/cds/modules/theme/static/scss/cds.scss
+++ b/cds/modules/theme/static/scss/cds.scss
@@ -467,11 +467,16 @@ i.sort-handle {
 }
 
 .cds-home-video-featured {
+  margin-top: -22px;
   .cds-home-video-iframe {
     width: 100%;
     height: 100%;
     border: 0;
   }
+}
+
+.cds-detail-video-wrapper {
+  margin-top: -22px;
 }
 
 .cds-deposit-listing {
